# cpp-performance-optimization

./: .gitignore  CMakeLists.txt  filters.csv  generate_data.py
baseline/: CMakeLists.txt  employee_registry.cpp  employee_registry.hpp  filter.hpp  filter_loader.cpp  filter_loader.hpp  main.cpp
cmake/Modules/: FindIttnotify.cmake
intrinsics/: CMakeLists.txt  employee_registry.cpp  employee_registry.hpp  filter.hpp  filter_equals.cxx  filter_greater.cxx  filter_greater_or_equals.cxx  filter_less.cxx  filter_less_or_equals.cxx  filter_not_equals.cxx  main.cpp
no_unnecessary_copies/: CMakeLists.txt  employee_registry.hpp  filter_loader.cpp  main.cpp
parallel_and_vectorized/: CMakeLists.txt  employee.hpp  employee_registry.cpp  filter.hpp  main.cpp
parallel_baseline/: CMakeLists.txt  employee_registry.hpp  filter_loader.cpp  main.cpp
specify_string_type/: CMakeLists.txt  employee_registry.cpp  filter.hpp  filter_loader.cpp  filter_loader.hpp  main.cpp
vectorize/: CMakeLists.txt  employee_registry.cpp  filter.hpp  main.cpp
vectors_of_simple_objects/: CMakeLists.txt  employee_registry.cpp  filter.hpp  filter_loader.cpp  main.cpp
