cmake_minimum_required(VERSION 3.9.1)
project(filtering_vectorize)
set(CMAKE_CXX_COMPILER icl)
file(GLOB SOURCES ./*.cpp ./*.hpp)
add_executable(vectorize main.cpp ${SOURCES})
set_target_properties(vectorize PROPERTIES CXX_STANDARD 17)
target_link_libraries(vectorize ${VTUNE_AMPLIFIER_PATH}/lib64/libittnotify.lib)
target_include_directories(vectorize PRIVATE ${VTUNE_AMPLIFIER_PATH}/include)
